fixed webhook receipt_url bug

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -146,10 +146,11 @@
                     <div class="col-12 col-md-6 text-right">
                         <p class="mb-0 aw"><span class="underline ">${{ order.grand_total }}</span></p>
                     </div>
-                    <div class="col-12 col-md-8">
-                        <a class="aw btn btn-primary border-bk hover-shadow" href="{{ order.stripe_receipt }}"
+                    <div class="col-12 col-md-8 py-2">
+                        <a class="aw btn btn-primary border-bk hover-shadow" href="{{  order.stripe_receipt }}"
                             target="_blank"><i class="fad fa-file-invoice-dollar fa-lg px-1"></i><span class="aw">View
                                 Receipt</span>
+
                         </a>
                     </div>
 
