--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -28,13 +28,14 @@
             <div class="col-12 ">
                 <div class="social text-center">
                     <a class="mx-3" href="https://twitter.com/" target="_blank">
-                        <i class="fab fa-twitter text-light fa-lg"></i>
+                        <img src="https://img.icons8.com/color/36/000000/twitter.png" /></a>
+
+                    <a class="mx-3" href="https://www.instagram.com/" target="_blank">
+                        <img src="https://img.icons8.com/fluent/36/000000/instagram-new.png" />
                     </a>
                     <a class="mx-3" href="https://www.facebook.com/" target="_blank">
-                        <i class="fab fa-facebook text-light  fa-lg"></i>
-                    </a>
-                    <a class="mx-3" href="https://www.instagram.com/" target="_blank">
-                        <i class="fab fa-instagram  text-light fa-lg"></i>
+                        <img src="https://img.icons8.com/color/36/000000/facebook-new.png" />
+
                     </a>
                 </div>
             </div>
@@ -75,6 +76,11 @@
     <div class="row">
         <div class="col-12 feet-bg">
             <h6 class="aw text-center my-3">Web Design by Clinton Davis</h6>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 feet-bg">
+            <a class="text-center font-small" href="https://icons8.com/icon/17949/google">Social icons by Icons8</a>
         </div>
     </div>
 </div>
