--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -5,18 +5,30 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
+<div class="reg-pic ">
+  <div class="container center-block">
+    <div class="overlay">
+      <div class="col p-4">
+        <p class="text-red aw display-3 text-center">Sign Up</p>
 
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+        <p class="text-wht">{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are
+          about to use your
+          {{provider_name}} account to login to
+          <span class="aw">{{site_name}}.</span> <br>
+          As a final step, please complete the form:{% endblocktrans %}</p>
+
+        <form class="signup aw text-wht" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
+          {% csrf_token %}
+          {{ form|crispy }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <button class="rounded-10 p-2 text-wht bg-danger w-100" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
