--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -6,15 +6,16 @@
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
 <li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
+  <a title="{{brand.name}}" class="socialaccount_provider {{provider.id}} {{brand.id}} aw "
+    href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
 </li>
 {% endfor %}
 {% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+
+<a title="{{provider.name}}"
+  class="socialaccount_provider {{provider.id}} btn btn btn-outline-dark text-bk px-4 w-100 aw rounded-10 bg-light"
+  href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+  <img class="mr-4" src="https://img.icons8.com/color/30/000000/google-logo.png" />
+  <span class="aw">Sign up with </span>{{provider.name}}</a>
+
 {% endfor %}
