--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -79,7 +79,7 @@
 
                             <!-- Modal Header -->
                             <div class="modal-header bg-black-a">
-                                <h3 class="modal-title text-wht aw">Blog Comments</h3>
+                                <h3 class="modal-title text-wht aw">Comments</h3>
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
 
