--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
                     {% endif %}
 
                     {% if current_membership == "Free" %}
-                    <a class="  hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
+                    <a class=" hover-shadow hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'memberships:select-membership' %}" role="button">Subcribe</a>
                     {% endif %}
 
@@ -46,7 +46,7 @@
                     <a class=" hover-shadow hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_logout' %}" role="button">Logout</a>
                     {% else %}
-                    <a class=" light-shadow hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
+                    <a class="hover-shadow light-shadow hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_login' %}" role="button">Login</a>
                     {% endif %}
                 </div>
@@ -110,12 +110,12 @@
                         Fitness has to
                         offer. You'll get full access to all the gym works and diets
                         plans, Plus access to the community, Write your own blog post so
-                        share you experainces. <span class="aw">All subscribers get 10% all shope items!</span>
+                        share you experainces. All Subscribers get <span class="aw">12% Off</span> on all shope items!
                         Just click the Button below to Join.</p>
 
                     {% if request.user.is_authenticated  %}
                     <div class="text-center">
-                        <a class=" w-50 hero-btn btn btn-success btn-lg aw text-wht border border-secondary bs-2"
+                        <a class=" w-50 hero-btn btn btn-success btn-lg aw text-wht hover-shadow border border-bk bs-2"
                             href="{% url 'memberships:select-membership' %}" role="button">Join Up</a>
                     </div>
                     {% else %}
