--- a/static/css/style.css
+++ b/static/css/style.css
@@ -910,6 +910,7 @@ nav {
 }
 
 
+
 /*----------Media Queries */
 
 @media (min-width: 576px) {
@@ -924,6 +925,10 @@ nav {
   .display-4 {
     font-size: 3.5rem;
   }
+
+
+
+
 }
 
 @media (max-width: 576px) {
@@ -931,6 +936,8 @@ nav {
     padding-left: 1px;
     padding-right: 1px;
   }
+
+
 }
 
 @media (min-width: 768px) {
@@ -955,6 +962,13 @@ nav {
     max-width: 70%;
   }
 
+
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 0.9rem;
+  }
 }
 
 @media (min-width: 992px) {
@@ -973,6 +987,7 @@ nav {
   .video-width {
     max-width: 800px;
   }
+
 }
 
 @media (min-width: 1200px) {
