--- a/profiles/templates/profiles/profile_subscriptions.html
+++ b/profiles/templates/profiles/profile_subscriptions.html
@@ -8,7 +8,7 @@
     <div class="container profile">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Dashboard</a>
+                <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Subscriptions</small>
             </div>
