--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ p {
   font-family: "montserrat", sans-serif;
   font-weight: 400;
   max-width: 600px;
-  /* font-size: 1.125em; */
+
 }
 
 ul {
@@ -49,6 +49,10 @@ img {
   padding-left: 4rem;
 }
 
+.cke_editable {
+
+  line-height: 1.0;
+}
 
 .hover-shadow:hover {
   -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
