changed name of model to suit better and changed order in index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -150,8 +150,10 @@
                         <div class="col">
 
                             <p class="mb-0  aw">Was <span class="mont_b">$</span><s
-                                    class="text-red">{{ items.price }}</s></p>
-                            <p class="lead mb-0  aw">Now <span class="mont_b">$</span>{{ items.sale_price }}</p>
+                                    class="text-red">{{ items.was_price }}</s></p>
+
+                            <p class="lead mb-0  aw">Now <span class="mont_b">$
+                                </span>{{ items.price }}</p>
 
                             <i class="fas text-ylw fa-lg fa-star mr-1"></i>
                             <small class="">{{ items.rating_ave}}</small>
