--- a/templates/base.html
+++ b/templates/base.html
@@ -43,10 +43,10 @@
     <script src="https://kit.fontawesome.com/81e9d69a66.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script rel="stylesheet" src="{% static 'js/main.js' %}"></script>
+    <script rel="stylesheet" src="{% static 'js/clickRipple.js' %}"></script>
+    <script rel="stylesheet" src="{% static 'js/scrollUp.js' %}"></script>
     <script src="{% static 'js/stripe_elements.js' %}"></script>
     <script rel="stylesheet" href="{% static 'js/cart.js' %}"></script>
-
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock Core_js %}
 
